src/components/ZipcodeFilter/ZipcodeFilter.css
.zip-filtered-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* border-bottom: 1px solid black;
    border-top: 1px solid black; */
    max-width: 80%;
    /* max-width: 90%; */
    margin: 30px auto;
    font-family: Abel, 'Raleway', Arial, Helvetica, sans-serif;
  }
  
  .zip-label {
    display: inline-block;
    font-size: 1.38571429rem;
    margin: 20px 0px;
    font-size: 1.5em;
    font-weight: 500;
    font-family: Helvetica, sans-serif;
  }
  
  .filtered-zip-input {
    width: 40vw;
    text-align: center;
    margin-bottom: 20px;
    border: 1px solid black;
    height: 25px;
  } 
  
  .filtered-locations-by-zip {
    margin: 0px 0px 0px 0px;
    padding: 0px 0px;
  }
  
  .filtered-list-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    line-height: 1.25;
    list-style-type: none;
    margin-bottom: 55px;
    font-size: 1.75rem;
    font-weight: normal;
    font-family: Helvetica, sans-serif;
  }

  .filtered-list-item p {
    margin: 0px;
  }
  
  .results-header {
    font-size: 1.5rem;
    text-decoration: underline;
    font-weight: normal;
    margin-bottom: 40px;
  }

